hphp/hack/test/typecheck/inout/bad_inout_decl_coroutine.php.exp
File "bad_inout_decl_coroutine.php", line 3, characters 38-39:
Inout parameters cannot be defined on async functions, generators or coroutines. (NastCheck[3042])
