hphp/hack/test/typecheck/inout/bad_inout_decl_coroutine.php
<?hh // strict

coroutine function test(inout string $s): int {
  $f = coroutine () ==> 42;
  return suspend $f();
}
